/*
Copyright (c) 2021 Nordix Foundation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package ipam;
option go_package = "github.com/nordix/meridio/api/ipam";
import "google/protobuf/empty.proto";

service IpamService {
    rpc Allocate(SubnetRequest) returns (Subnet) {}
    rpc Release(SubnetRelease) returns (google.protobuf.Empty) {}
}

message Subnet {
    string address = 1;
    int32 prefixLength = 2;
}

message SubnetRequest {
    Subnet subnetPool = 1;
    int32 prefixLength = 2;
}

message SubnetRelease {
    Subnet subnetPool = 1;
    Subnet subnet = 2;
}

